# cas-ss2026

./: README.md
01-cpp-hello/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
02-python-webapp/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  requirements.txt  storage.py
03-client/: README.md  index.html
04-python-websocket/: README.md  client.html  client.py  server.py
05-python-grpc/: .gitignore  Dockerfile  README.md  client.py  server.py  telemetry.proto
06-cmd-vs-entry/: Dockerfile
07-nginx/: README.md  index.html
